--- a/_data/reviews/review-srochno-nado-kastrirovat-kota.yaml
+++ b/_data/reviews/review-srochno-nado-kastrirovat-kota.yaml
@@ -1,8 +1,8 @@
 ---
 _id: fa933e6b3f65fb27d8bd207a694114df779079d2
 name: Катя Беспалова
-comment: Тоже долго не мог решиться. Но потом нашёл кастрировать кота — <a href="https://doctorpanda24.ru/kastratsiya-kotov">https://doctorpanda24.ru/kastratsiya-kotov</a>.
-  Теперь обращаюсь только к ним.
+comment: Тоже долго не мог решиться. Но потом нашёл где кастрировать кота — <a href="https://doctorpanda24.ru/kastratsiya-kotov">https://doctorpanda24.ru/kastratsiya-kotov</a>.
+  Теперь советую только их.
 product: srochno-nado-kastrirovat-kota
 date: "2019-10-07"
 ...
