--- a/_data/reviews/review-trebuetsia--baza-otdykha-v-novosibirske.yaml
+++ b/_data/reviews/review-trebuetsia--baza-otdykha-v-novosibirske.yaml
@@ -1,8 +1,8 @@
 ---
 _id: 67f0757ea439c333b668a7f7dad26057c79143fd
 name: sovetchik_nik
-comment: Да, знаешь, если надо базы отдыха на Оби, то это только к ним — <a href="http://bazadryzba.ru/">http://bazadryzba.ru/</a>.
+comment: Да, знаешь, если надо найти базу отдыха на Оби, то это только к ним — <a href="http://bazadryzba.ru/">http://bazadryzba.ru/</a>.
   Все сделают по высшему разряду и за приличные деньги.
 product: trebuetsia--baza-otdykha-v-novosibirske
-date: "2019-10-11"
+date: "2019-07-01"
 ...
